[package]
name = "torbox-tun"
description = ""
author = "Luca"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
clap = "2.33.3"
tun = { version = "0.5", features = ["async"] }
